# blackleg_hydrothermal

./: .gitignore  README.md  balckleg_spatial_example.py  blackleg_spatial.py  khangura2007_weather_1998-2000_incl_FPM.csv  mkdocs.yml  model2_vs_actual.py  model_vs_actual.py  model_vs_model2.py  pyproject.toml  read_silo_weather_cog.py  weatherOz_getdata.qmd
data/: Pseudothecia_Maturity_Dates_khangura2007.csv  khangura2007_weather_1998-2000.csv  northam_NO__2022-06-20.csv
docs/: index.md  thermal_time.md
docs/notebooks/: blackleg_2d.ipynb  model2_vs_actual.py
src/blackleg_hydrothermal/: blackleg_sporacle_model.py  blackleg_sporacle_model_2d.py  hydrothermal_model.py  hydrothermal_model_2d.py  read_silo_cog_arrays.py  sporacleEzy_model.py  sporacleEzy_model_2d.py  thermal_time.py
test/: test_models_csv.py
