[project]
name = "blackleg-hydrothermal"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "harryeslick", email = "harry.eslick@dpird.wa.gov.au" }
]
dependencies = [
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "nbformat>=5.10.4",
    "statsmodels>=0.14.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "dask>=2024.11.1",
    "rioxarray>=0.18.1",
    "netcdf4>=1.7.2",
    "geopandas>=1.0.1",
    "scipy>=1.14.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blackleg_hydrothermal"]
